Use apparch-core

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "drapp",
+    "name": "apparch-demo",
     "description": "This project is really great.",
     "slug": "drapp",
     "privacy": "public",
