--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+!node_modules/apparch-core/*
 node_modules/**/*
 .expo/*
 npm-debug.*
@@ -5,3 +6,4 @@ npm-debug.*
 *.p12
 *.key
 *.mobileprovision
+.DS_Store
