--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "eject": "expo eject",
     "config-sync": "node ./node_modules/apparch-core/console/config-sync.js",
     "config-map": "node ./node_modules/apparch-core/console/config-map.js",
-    "build": "node ./node_modules/apparch-core/console/build.js"
+    "build": "node ./node_modules/apparch-core/console/build.js",
+    "prettier": "prettier 'src/**/*.js' --write"
   },
   "dependencies": {
     "expo": "^31.0.2",
@@ -20,6 +21,12 @@
     "react-navigation": "^3.0.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "prettier": "^1.15.2"
+  },
+  "prettier": {
+    "jsxBracketSameLine": true,
+    "semi": false,
+    "singleQuote": true
   }
 }
